kubernetes/apps/default/hook-proxy/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hook-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hook-proxy
  template:
    metadata:
      labels:
        app: hook-proxy
    spec:
      containers:
        - name: hook-proxy
          image: hwestman/hook-proxy:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 128Mi
