kubernetes/apps/default/hook-proxy/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hook-proxy
spec:
  selector:
    app: hook-proxy
  ports:
    - name: http
      port: 80
      targetPort: 80
