kubernetes/apps/default/hook-proxy/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hook-proxy
spec:
  hostnames:
    - "hook-proxy.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: hook-proxy
          port: 80
